[CLEANUP] Make dependencies Gradle 7.0 compatible.